Build header html, add placeholder img

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Red Baron Apartments</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h4 class="logo">Red Baron Apartments</h4>
+        <ul class="links">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+        <h2 class="title">Home is where the action is</h2>
+        <div class="heading-info">Right in the heart of downtown, Red Baron Apartments could be
+            your new home! Complete with all the ammenities and a location that simply can't be beat.
+        </div>
+        <button class="appy">Apply now</button>
+        <img src="img/">
+    </div>
 </body>
 </html>
