Add space-between .links and .logo remove ul bullets

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Baron Apartments</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <h4 class="logo">Red Baron Apartments</h4>
-        <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div class="h-top">
+            <h4 class="logo">Red Baron Apartments</h4>
+            <ul class="links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
         <h2 class="title">Home is where the action is</h2>
         <div class="heading-info">Right in the heart of downtown, Red Baron Apartments could be
             your new home! Complete with all the ammenities and a location that simply can't be beat.
