--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
                 <li>header link three</li>
             </ul>
         </div>
-        <h2 class="title">Home is where the action is</h2>
-        <div class="heading-info">Right in the heart of downtown, Red Baron Apartments could be
-            your new home! Complete with all the ammenities and a location that simply can't be beat.
+        <div class="h-bottom">
+            <h2 class="title">Home is where the action is</h2>
+            <div class="heading-info">Right in the heart of downtown, Red Baron Apartments could be
+                your new home! Complete with all the ammenities and a location that simply can't be beat.
+            </div>
+            <button class="appy">Apply now</button>
         </div>
-        <button class="appy">Apply now</button>
         <img src="img/">
     </div>
 </body>
