Add img to header, resize img, space between img and content

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
                 <li>header link three</li>
             </ul>
         </div>
-        <div class="h-bottom">
-            <h2 class="title">Home is where the action is</h2>
-            <div class="heading-info">Right in the heart of downtown, Red Baron Apartments could be
-                your new home! Complete with all the ammenities and a location that simply can't be beat.
+        <div class="img-align">
+            <div class="h-bottom">
+                <h2 class="title">Home is where the action is</h2>
+                <div class="heading-info">Right in the heart of downtown, Red Baron Apartments could be
+                    your new home! Complete with all the ammenities and a location that simply can't be beat.
+                </div>
+                <button class="appy">Apply now</button>
             </div>
-            <button class="appy">Apply now</button>
+            <img src="img/building.jpg">
         </div>
-        <img src="img/">
     </div>
 </body>
 </html>
