Add all html elements,create basic flex model

--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
             <img src="img/building.jpg">
         </div>
     </div>
+    <div class="info">
+        <div class="info-title">A finer way of life</div>
+        <div class="all-items">
+            <div class="item">
+                <div class="box"><img src="img/"></div>
+                <p class="info-text">Fill</p>
+            </div>
+            <div class="item">
+                <div class="box"><img src="img/"></div>
+                <p class="info-text">Fill</p>
+            </div>
+            <div class="item">
+                <div class="box"><img src="img/"></div>
+                <p class="info-text">Fill</p>
+            </div>
+            <div class="item">
+                <div class="box"><img src="img/"></div>
+                <p class="info-text">Fill</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
