Add ammenities imgs
I was running into specificity issues with my header image causing the
width to be out of proportion for my ".box" images. I fixed it by adding
an ancestor to the css to specify which set of images I wanted at which
width.

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="info-title">A finer way of life</div>
         <div class="all-items">
             <div class="item">
-                <div class="box"><img src="img/"></div>
+                <div class="box"><img src="img/gym.jpg"></div>
                 <p class="info-text">Fill</p>
             </div>
             <div class="item">
-                <div class="box"><img src="img/"></div>
+                <div class="box"><img src="img/pool.jpg"></div>
                 <p class="info-text">Fill</p>
             </div>
             <div class="item">
-                <div class="box"><img src="img/"></div>
+                <div class="box"><img src="img/garden.jpg"></div>
                 <p class="info-text">Fill</p>
             </div>
             <div class="item">
-                <div class="box"><img src="img/"></div>
+                <div class="box"><img src="img/camera.jpg"></div>
                 <p class="info-text">Fill</p>
             </div>
         </div>
