Add alt text to imgs, add description text as well
I added a max width of 200px to "p" descendants of ".item" because the
text was spilling over.

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         <div class="info-title">A finer way of life</div>
         <div class="all-items">
             <div class="item">
-                <div class="box"><img src="img/gym.jpg"></div>
-                <p class="info-text">Fill</p>
+                <div class="box"><img src="img/gym.jpg" alt="Image of a gym with weights and benches"></div>
+                <p class="info-text">Work it out in our state of the art gym!</p>
             </div>
             <div class="item">
-                <div class="box"><img src="img/pool.jpg"></div>
-                <p class="info-text">Fill</p>
+                <div class="box"><img src="img/pool.jpg" alt="Image of an indoor pool"></div>
+                <p class="info-text">Relax and exercise year round in our heated indoor pool! Comes with a great view of the city.</p>
             </div>
             <div class="item">
-                <div class="box"><img src="img/garden.jpg"></div>
-                <p class="info-text">Fill</p>
+                <div class="box"><img src="img/garden.jpg" alt="Image of a luscious rooftop garden"></div>
+                <p class="info-text">Breathe in the fresh air and bask in the majesty of our luscious rooftop garden!</p>
             </div>
             <div class="item">
-                <div class="box"><img src="img/camera.jpg"></div>
-                <p class="info-text">Fill</p>
+                <div class="box"><img src="img/camera.jpg" alt="Image of security cameras"></div>
+                <p class="info-text">Feel secure knowing that our full-time security team is always on the case!</p>
             </div>
         </div>
     </div>
