Add quote text and credit

--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
             </div>
         </div>
     </div>
+    <div class="quote-space">
+        <div class="quote">
+            <em>I love these apartments! I just can't stress enough how friendly the staff is and how beuatiful the view is. 
+                I love that it's so close to everything, I even bike to work!</em>
+            <p class="resident">-Mrs. Robinson</p>
+        </div>
+    </div>
 </body>
 </html>
