--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@
             <p class="resident">-Mrs. Robinson</p>
         </div>
     </div>
+    <div class="cta-space">
+        <div class="cta">
+            <div class="cta-text">
+                <p class="cta-title">Apply for your new home today!</p>
+                <p class="cta-info">We're currently taking applications for spacious one, two, and three bedroom apartments. Don't wait!</p>
+            </div>
+            <button class="cta-button">Apply now</button>
+        </div>
+    </div>
 </body>
 </html>
