Add copyright, round buttons, and adjust button borders

--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
             <button class="cta-button">Apply now</button>
         </div>
     </div>
+    <div class="copyright">
+        <div>Copyright &copy; ThizzGod 2023</div>
+    </div>
 </body>
 </html>
