Add alt text to header image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <button class="appy">Apply now</button>
             </div>
-            <img src="img/building.jpg">
+            <img src="img/building.jpg" alt="Image of tall apartment building in the sunset">
         </div>
     </div>
     <div class="info">
