Fill in text for header links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="h-top">
             <h4 class="logo">Red Baron Apartments</h4>
             <ul class="links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li>About Us</li>
+                <li>Resident Portal</li>
+                <li>Contact Us</li>
             </ul>
         </div>
         <div class="img-align">
